@@ -8,7 +8,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.ModelMapper;
 import org.modelmapper.config.Configuration;
 import org.springframework.data.crossstore.ChangeSetPersister;
-import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -27,101 +26,100 @@ public class ManagingPasswordsService {
         this.cryptoDetailsUtils = cryptoDetailsUtils;
         this.modelMapper = modelMapper;
         this.passwordsRepository = passwordsRepository;
+
+        // Initialize model mapper configuration once
+        this.modelMapper.getConfiguration()
+                .setFieldMatchingEnabled(true)
+                .setFieldAccessLevel(Configuration.AccessLevel.PRIVATE);
     }
 
-    public List<ManagingPasswords> managingPasswords(List<ManagingPasswords> passwords)
-    {
-        log.info("service to manage password");
+    public List<ManagingPasswords> managePasswords(List<ManagingPasswords> passwords) {
+        log.info("Service to manage passwords");
+
         try {
-
             List<ManagedPassword> managedPasswordList = passwords.stream()
-                    .map(managingPasswords -> {
-                        cryptoDetailsUtils.initFromStrings("3k8C9JS6p0d4LwgF+PSa9a4qjNWPh/klCJC3Lm0wmuY=", "cfXyXPfwgggkgp0c");
-                        ManagedPassword managedPassword = new ManagedPassword();
-
-                        managedPassword.setUserId(managingPasswords.getUserId());
-                        managedPassword.setWebsiteName(managingPasswords.getWebsiteName());
-                        try {
-                            managedPassword.setPassword(cryptoDetailsUtils.encrypt(managingPasswords.getPassword()));
-                        } catch (Exception e) {
-                            throw new RuntimeException(e);
-                        }
-
-                        return managedPassword;
-                    }).toList();
+                    .map(this::convertToManagedPassword)
+                    .collect(Collectors.toList());
 
             passwordsRepository.saveAll(managedPasswordList);
-
-            modelMapper.getConfiguration()
-                    .setFieldMatchingEnabled(true)
-                    .setFieldAccessLevel(Configuration.AccessLevel.PRIVATE);
 
             return managedPasswordList.stream()
                     .map(p -> modelMapper.map(p, ManagingPasswords.class))
                     .collect(Collectors.toList());
-        }catch (Exception e){
-            throw new RuntimeException(e.getMessage());
+        } catch (Exception e) {
+            log.error("Error managing passwords", e);
+            throw new RuntimeException(e.getMessage(), e);
         }
     }
-    public ManagingPasswords decrypt(long userId) throws Exception {
-        log.info("Service to decrypt details");
+
+    private ManagedPassword convertToManagedPassword(ManagingPasswords managingPasswords) {
+        try {
+            cryptoDetailsUtils.initFromStrings("3k8C9JS6p0d4LwgF+PSa9a4qjNWPh/klCJC3Lm0wmuY=", "cfXyXPfwgggkgp0c");
+            ManagedPassword managedPassword = new ManagedPassword();
+            managedPassword.setUserId(managingPasswords.getUserId());
+            managedPassword.setWebsiteName(managingPasswords.getWebsiteName());
+            managedPassword.setPassword(cryptoDetailsUtils.encrypt(managingPasswords.getPassword()));
+            return managedPassword;
+        } catch (Exception e) {
+            log.error("Error encrypting password for userId: {}", managingPasswords.getUserId(), e);
+            throw new RuntimeException("Encryption failed", e);
+        }
+    }
+
+    public List<ManagingPasswords> decrypt(long userId) throws Exception {
+        log.info("Service to decrypt details for userId: {}", userId);
 
         try {
-            Optional<ManagedPassword> optionalPassword = passwordsRepository.findByUserId(userId);
-            if (optionalPassword.isEmpty()){
+            Optional<List<ManagedPassword>> optionalPasswords = passwordsRepository.findAllByUserId(userId);
+            if (optionalPasswords.isEmpty()) {
+                log.warn("No passwords found for userId: {}", userId);
                 throw new ChangeSetPersister.NotFoundException();
             }
-            ManagedPassword password = optionalPassword.get();
-            log.info("details fetched successfully");
 
+            List<ManagedPassword> managedPasswords = optionalPasswords.get();
+            return managedPasswords.stream()
+                    .map(this::decryptPassword)
+                    .collect(Collectors.toList());
+        } catch (Exception e) {
+            log.error("Error while decrypting passwords for userId: {}", userId, e);
+            throw new RuntimeException(e.getMessage(), e);
+        }
+    }
 
-            // Initialize the encryption/decryption utility with the appropriate key and IV
+    private ManagingPasswords decryptPassword(ManagedPassword managedPassword) {
+        try {
             cryptoDetailsUtils.initFromStrings("3k8C9JS6p0d4LwgF+PSa9a4qjNWPh/klCJC3Lm0wmuY=", "cfXyXPfwgggkgp0c");
-
-            // Decrypt the encrypted password from the Password object
-
-            String decryptedWebsite = cryptoDetailsUtils.decrypt(password.getWebsiteName());
-            log.info("fetching was successful");
-            // Return the decrypted password
-            return new ManagingPasswords(password.getUserId(),
-                    password.getWebsiteName(),decryptedWebsite);
-        }catch (Exception e){
-            throw new RuntimeException("Password with ID " + userId + " not found");
+            String decryptedPassword = cryptoDetailsUtils.decrypt(managedPassword.getPassword());
+            return new ManagingPasswords(managedPassword.getUserId(), decryptedPassword, managedPassword.getWebsiteName());
+        } catch (Exception e) {
+            log.error("Error decrypting password for managedPasswordId: {}", managedPassword.getUserId(), e);
+            throw new RuntimeException("Decryption failed", e);
         }
-
-
     }
 
-    public ManagingPasswords updateDetails(long userId, ManagingPasswords passwords) throws Exception{
-        log.info("updating managed details");
-        Optional<ManagedPassword> toUpdate = passwordsRepository.findByUserId(userId);
-        if (toUpdate.isEmpty()){
-            throw new IllegalArgumentException("Password with ID " + userId + " not found");
+    public ManagingPasswords updateDetails(long userId, ManagingPasswords passwords) throws Exception {
+        log.info("Updating managed details for userId: {}", userId);
+
+        try {
+            Optional<ManagedPassword> toUpdate = passwordsRepository.findByUserId(userId);
+            if (toUpdate.isEmpty()) {
+                log.warn("Password with userId {} not found", userId);
+                throw new IllegalArgumentException("Password with userId " + userId + " not found");
+            }
+
+            ManagedPassword updatePassword = toUpdate.get();
+            cryptoDetailsUtils.initFromStrings("3k8C9JS6p0d4LwgF+PSa9a4qjNWPh/klCJC3Lm0wmuY=", "cfXyXPfwgggkgp0c");
+            updatePassword.setWebsiteName(passwords.getWebsiteName());
+            updatePassword.setPassword(cryptoDetailsUtils.encrypt(passwords.getPassword()));
+            updatePassword.setUserId(userId);
+
+            passwordsRepository.save(updatePassword);
+            log.info("Update success for userId: {}", userId);
+
+            return modelMapper.map(updatePassword, ManagingPasswords.class);
+        } catch (Exception e) {
+            log.error("Error updating details for userId: {}", userId, e);
+            throw new RuntimeException(e.getMessage(), e);
         }
-        ManagedPassword updatePassword = toUpdate.get();
-        cryptoDetailsUtils.initFromStrings("3k8C9JS6p0d4LwgF+PSa9a4qjNWPh/klCJC3Lm0wmuY=","cfXyXPfwgggkgp0c");
-        updatePassword.setWebsiteName(passwords.getWebsiteName());
-        updatePassword.setPassword(passwords.getPassword());
-        updatePassword.setUserId(userId);
-        log.info("update success");
-
-        passwordsRepository.save(updatePassword);
-        return null;
-
-
     }
-
-    /*public HttpStatus deleteDetails(Long id)throws Exception{
-        log.info("deleting the details managed for user with id {} ", id);
-        Optional<Password> passwordToDelete = passwordsRepository.findById(id);
-        if (passwordToDelete.isEmpty()){
-            return HttpStatus.NOT_FOUND;
-            //return new NotFoundException("the password with id"+id+" does not exist");
-        }
-        Password delete = passwordToDelete.get();
-        passwordsRepository.delete(delete);
-        log.info("deletion success for user with id {} ", id);
-
-        return HttpStatus.OK;
-    }*/
 }
